--- a/config/community_locales/en.yml
+++ b/config/community_locales/en.yml
@@ -214,6 +214,7 @@ en:
     title: "Activity Feed"
     user_status_text: "What are you working on?"
     user_status_submit: "Post"
+    no_interactions_yet: "There were no interactions yet."
     verbs:
       follow: "Follow"
       unfollow: "Unfollow"
@@ -226,5 +227,7 @@ en:
       user_updated_project_status: '%{user} updated project %{updated} status'
       user_updated_topic_status: '%{user} updated topic %{updated} status'
       user_added_photos_to_project: '%{user} added photos to project %{project}'
+      user_added_links_to_project: '%{user} added links to project %{project}'
       topic_created: '%{topic} has been created'
       user_commented: "%{user} added a comment on %{followed}'s %{activity}"
+      user_commented_on_project: "%{user} added a comment on project %{project}"
