NM-2945 Activity feed design

--- a/config/community_locales/simple_form.en.yml
+++ b/config/community_locales/simple_form.en.yml
@@ -22,7 +22,7 @@ en:
         topics: 'Select topics'
 
       comment:
-        comment: 'Please, leave a comment'
+        body: 'Please, leave a comment'
 
       search_filter:
         sort: 'Sort by:'
