--- a/config/community_locales/en.yml
+++ b/config/community_locales/en.yml
@@ -198,6 +198,7 @@ en:
   pending: 'Pending'
   save_changes: 'Save Changes'
   delete_project: 'Delete Project'
+  draft_project: 'This project is disabled.'
 
   # account
   my_account: 'My Account'
