IDM-10 Display filter selection

--- a/config/community_locales/simple_form.en.yml
+++ b/config/community_locales/simple_form.en.yml
@@ -13,7 +13,8 @@ en:
 
     placeholders:
       defaults:
-        topic_ids: 'Topic'
+        topic_ids: 'Select Topic'
+        role: 'Select Role'
       search:
         search: 'Search'
 
