--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "Chart.js": "~1.0.2",
     "jquery-ui": "~1.11.4",
     "cropper": "~1.0.0",
-    "jstree": "~3.2.1"
+    "jstree": "~3.2.1",
+    "jquery-dragster": "~1.0.3"
   }
 }
