IDM-55 Fixed rectangular -> square

--- a/config/community_locales/simple_form.en.yml
+++ b/config/community_locales/simple_form.en.yml
@@ -109,7 +109,7 @@ en:
 
       profile:
         cover_image: 'For best results use an image with dimensions 1920×285px or crop it after upload.'
-        avatar: 'For best results use a rectangular image with dimensions 200×200px or crop it after upload.'
+        avatar: 'For best results use a square image with dimensions 200×200px or crop it after upload.'
 
   search_submit: 'Go'
 
