--- a/config/mixpanel.yml
+++ b/config/mixpanel.yml
@@ -1,12 +1,12 @@
 production:
-  api_key: 6f0599fe13af5109e86193a9fc82b44d
-  api_secret: 2a92d51306759b5ab31df92e9d9fc7cc
-  token: 7ffff7057407af5fe5f71701a1ab26b2
+  api_key: <%= ENV['MIXPANEL_API_KEY'] %>
+  api_secret: <%= ENV['MIXPANEL_API_SECRET'] %>
+  token: <%= ENV['MIXPANEL_API_TOKEN'] %>
 staging:
   # staging has separate mixpanel account
-  api_key: 2f186c65143dc19922e88a39b0d09c91
-  api_secret: 68a51642fcaaf6447851cd1f0ac31122
-  token: 7536d92b0802661ebeef7519900d03d7
+  api_key: <%= ENV['MIXPANEL_API_KEY'] %>
+  api_secret: <%= ENV['MIXPANEL_API_SECRET'] %>
+  token: <%= ENV['MIXPANEL_API_TOKEN'] %>
 profiling:
  # let's display production data on development as well, assuming it is free. Change if proven otherwise
   api_key: 6f0599fe13af5109e86193a9fc82b44d
