NM-3472 remove current location CR

--- a/config/community_locales/simple_form.en.yml
+++ b/config/community_locales/simple_form.en.yml
@@ -55,6 +55,8 @@ en:
 
 
     labels:
+      user:
+        current_address: "Address"
       defaults:
         topic_ids: 'Topic'
         seek_collaborators: 'Seeking Collaborators'
