NM-3669A Changing rack setter to handle ping, changing custom attribs expiration, adding rake task to expire all cache

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ config/redis.yml
 config/application.yml
 config/database.yml
 config/elasticsearch.yml
+config/unicorn.conf
 log
 node_modules
 tmp
