--- a/bower.json
+++ b/bower.json
@@ -45,13 +45,13 @@
     "jquery.inview": "jquery.inview.zuk#*",
     "jQueryRotate": "https://raw.githubusercontent.com/wilq32/jqueryrotate/2.3/jQueryRotate.js",
     "urlify": "https://raw.githubusercontent.com/django/django/master/django/contrib/admin/static/admin/js/urlify.js",
-    "nouislider": "~8.2.1",
     "jquery-tokeninput": "~1.7.0",
     "bootstrap-colorpicker": "*",
     "bootstrap-select": "~1.9.3",
     "jquery-timeago": "~1.4.3",
     "jquery-ias": "~2.2.1",
     "history.js": "~1.8.0",
-    "jquery.payment": "1.0.2"
+    "jquery.payment": "1.0.2",
+    "nouislider": "7.0.10"
   }
 }
