--- a/bower.json
+++ b/bower.json
@@ -51,6 +51,7 @@
     "jquery-ias": "~2.2.1",
     "history.js": "~1.8.0",
     "jquery.payment": "1.0.2",
-    "nouislider": "7.0.10"
+    "nouislider": "7.0.10",
+    "jt.timepicker": "timepicker#^1.8.9"
   }
 }
