--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "desksnearme",
-  "version": "8.0.2",
+  "version": "9.6.0-139",
   "homepage": "https://github.com/mdyd-dev/desksnearme",
   "private": true,
   "ignore": [
