--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "desksnearme",
-  "version": "9.6.0-54",
+  "version": "9.6.2-148",
   "homepage": "https://github.com/mdyd-dev/desksnearme",
   "private": true,
   "ignore": [
@@ -11,7 +11,8 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.4",
+    "jquery": "~2.2.0",
+    "jquery-legacy": "jquery#1.12.0",
     "jquery.cookie": "~1.4.1",
     "eonasdan-bootstrap-datetimepicker": "~4.17.37",
     "font-awesome": "~4.4.0",
@@ -52,6 +53,8 @@
     "jquery.payment": "1.0.2",
     "nouislider": "7.0.10",
     "jt.timepicker": "timepicker#^1.8.9",
-    "raygun4js": "^2.2.3"
+    "raygun4js": "^2.2.3",
+    "respond": "^1.4.2",
+    "placeholders": "^4.0.1"
   }
 }
