--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.2.0",
+    "jquery": "git@github.com:jquery/jquery-dist.git#~2.2.0",
     "jquery-legacy": "jquery#1.12.0",
     "jquery.cookie": "~1.4.1",
     "eonasdan-bootstrap-datetimepicker": "~4.17.37",
