--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gulp-sourcemaps": "^1.5.0",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
+    "imagemin": "^4.0.0",
     "imports-loader": "^0.6.5",
     "jshint": "^2.8.0",
     "jshint-stylish": "^2.1.0",
