NM-3413 stripe connect for Australia

--- a/config/community_locales/simple_form.en.yml
+++ b/config/community_locales/simple_form.en.yml
@@ -52,9 +52,9 @@ en:
         about: 'Tell us all about yourself project'
         location: 'Enter your city'
 
-
-
     labels:
+      merchant_account:
+        current_address: "Address"
       user:
         current_address: "Address"
       defaults:
