NM-4432 Footer fixes and How it Works page

--- a/bower.json
+++ b/bower.json
@@ -45,7 +45,7 @@
     "jQueryRotate": "https://raw.githubusercontent.com/wilq32/jqueryrotate/2.3/jQueryRotate.js",
     "urlify": "https://raw.githubusercontent.com/django/django/master/django/contrib/admin/static/admin/js/urlify.js",
     "jquery-tokeninput": "~1.7.0",
-    "bootstrap-colorpicker": "*",
+    "bootstrap-colorpicker": "~2.3.0",
     "jquery-timeago": "~1.4.3",
     "jquery-ias": "~2.2.1",
     "history.js": "~1.8.0",
