NM-4614 Follower already taken - intel

--- a/config/community_locales/en.yml
+++ b/config/community_locales/en.yml
@@ -157,6 +157,7 @@ en:
 
     more_info: 'You can add more information and complete your profile in your personal account'
     step_x_of_total: 'Step %{step} of %{total}'
+    no_suggestions_at_this_time: "No suggestions at this time."
 
   continue: 'Continue'
   connect_with_service: 'Connect with %{service}'
