NM-4725 Add videos to profile and project pages

--- a/config/community_locales/en.yml
+++ b/config/community_locales/en.yml
@@ -122,6 +122,7 @@ en:
   gallery: 'Gallery'
   description: 'Description'
   links: 'Links'
+  video: 'Video'
   read_more: '... Read More'
 
   # time
