--- a/config/community_locales/en.yml
+++ b/config/community_locales/en.yml
@@ -264,7 +264,8 @@ en:
     invite_member: 'Invite Member'
     accept: 'Accept'
     decline: 'Decline'
-    join: 'Ask to join'
+    ask_to_join: 'Ask to join'
+    join: 'Join'
     leave: 'Leave'
     request_sent: 'Request send'
     main_image: 'Main Image'
@@ -284,4 +285,3 @@ en:
 
   custom_errors:
     video_url_not_supported: "Video URL is invalid or video provider is not supported."
-
