--- a/config/community_locales/en.yml
+++ b/config/community_locales/en.yml
@@ -278,6 +278,7 @@ en:
       video_url: 'Enter yourube or vimeo URL'
       add_video: 'Add Video'
     manage_members: 'Manage Members'
+    group_deleted: "The group has been successfully deleted."
 
   # membership
   membership_cancelled: "Membership request has been cancelled."
