IDM-99-optional-location-field-for-groups

--- a/config/community_locales/en.yml
+++ b/config/community_locales/en.yml
@@ -258,6 +258,7 @@ en:
   group:
     name: 'Name'
     description: 'Description'
+    location: 'Location'
     gallery: 'Gallery'
     videos: 'Videos'
     links: 'Links'
