IDM-98 filtering and sorting for groups

--- a/config/community_locales/en.yml
+++ b/config/community_locales/en.yml
@@ -278,6 +278,7 @@ en:
     placeholders:
       video_url: 'Enter yourube or vimeo URL'
       add_video: 'Add Video'
+      select_group_type: 'Select Group Type'
     manage_members: 'Manage Members'
     group_deleted: "The group has been successfully deleted."
 
