IDM-92 Update "group_status_update" activity template

--- a/config/community_locales/en.yml
+++ b/config/community_locales/en.yml
@@ -252,7 +252,7 @@ en:
 
       user_created_group: '%{user} created group %{group}'
       user_added_photos_to_group: '%{user} added photos to group %{group}'
-      user_updated_group_status: '%{user} updated group %{updated} status'
+      user_updated_group_status: '%{user} posted an update in %{group}'
 
   # groups
   group:
