IDM-85 move associating groups and projects to projects

--- a/config/community_locales/simple_form.en.yml
+++ b/config/community_locales/simple_form.en.yml
@@ -15,6 +15,7 @@ en:
       defaults:
         topic_ids: 'Select Topic'
         project_ids: 'Select Topic'
+        group_ids: 'Select Group'
         role: 'Select Role'
         group_type_id: 'Select Group Type'
       search:
