--- a/config/community_locales/en.yml
+++ b/config/community_locales/en.yml
@@ -297,3 +297,7 @@ en:
   custom_errors:
     video_url_not_supported: "Video URL is invalid or video provider is not supported."
     main_image_missing: 'Please upload main image'
+
+  transactable_type:
+    project:
+      name: "project"
