--- a/.editorconfig
+++ b/.editorconfig
@@ -22,5 +22,11 @@ indent_size = 2
 [*.haml]
 indent_size = 2
 
+[*.html]
+indent_size = 2
+
+[*.liquid]
+indent_size = 2
+
 [*.md]
 trim_trailing_whitespace = false
