NM-5469 fix translation

--- a/lib/tasks/uot/uot.en.yml
+++ b/lib/tasks/uot/uot.en.yml
@@ -143,6 +143,11 @@ en:
     buttons:
       request: SUBMIT OFFER
 
+  activerecord:
+    attributes:
+      order/payment_documents:
+        file: "Secure Document Upload"
+
   activemodel:
     errors:
       models:
