NM 5537 Migrate bower to npm

--- a/.gitignore
+++ b/.gitignore
@@ -43,9 +43,8 @@ dump.rdb
 .envrc
 .vimrc
 .pryrc
-.npm-debug.log
+npm-debug.log
 work_files
-vendor/assets/bower_components
 *.sublime-project
 *.sublime-workspace
 *.org
