UOT-34 Update message in Payment Admin > Analytics

--- a/lib/tasks/uot/uot.en.yml
+++ b/lib/tasks/uot/uot.en.yml
@@ -77,6 +77,8 @@ en:
     analytics:
       bookings: Offers
       no_reservations_yet: You currently do not have any offers.
+      no_invoices_paid: You've not paid any invoices.
+
       columns:
         bookings: Offers
       total:
