UOT-45 add decline collaboration button

--- a/lib/tasks/uot/uot.en.yml
+++ b/lib/tasks/uot/uot.en.yml
@@ -216,3 +216,4 @@ en:
 
   transactable_collaborator:
     collaboration_cancelled: User has been removed from project.
+    collaborator_cancelled: "You have declined collaboration in this project."
