--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "bootstrap-switch": "^3.3.2",
     "brace": "^0.7.0",
     "chart.js": "^1.0.2",
-    "chosen-npm": "^1.4.2",
+    "chosen-js": "^1.4.2",
     "ckeditor": "^4.5.6",
     "cropper": "^1.0.0",
     "eonasdan-bootstrap-datetimepicker": "^4.17.37",
